feat: retirando comentarios

--- a/repos.ipynb
+++ b/repos.ipynb
@@ -164,14 +164,12 @@
     "    }\n",
     "    \n",
     "    try:\n",
-    "        # Subscribers\n",
     "        subscribers = requests.get(\n",
     "            f\"https://api.github.com/repos/{owner}/{repo_name}/subscribers\",\n",
     "            headers=get_headers()\n",
     "        )\n",
     "        stats[\"subscribers_count\"] = len(subscribers.json()) if subscribers.status_code == 200 else 0\n",
     "\n",
-    "        # Commits no último ano\n",
     "        participation = requests.get(\n",
     "            f\"https://api.github.com/repos/{owner}/{repo_name}/stats/participation\",\n",
     "            headers=get_headers()\n",
@@ -179,7 +177,6 @@
     "        if participation.status_code == 200:\n",
     "            stats[\"last_year_commits\"] = sum(participation.json().get(\"all\", [])[-52:])\n",
     "\n",
-    "        # Contribuidores\n",
     "        contributors = []\n",
     "        page = 1\n",
     "        while True:\n",
@@ -196,7 +193,6 @@
     "                break        \n",
     "        stats[\"contributors\"] = len(contributors)\n",
     "\n",
-    "        # Issues fechadas (últimos 6 meses)\n",
     "        since_date = (datetime.now() - timedelta(days=180)).isoformat()\n",
     "        closed_issues = requests.get(\n",
     "            f\"https://api.github.com/repos/{owner}/{repo_name}/issues?state=closed&since={since_date}\",\n",
@@ -204,7 +200,6 @@
     "        )\n",
     "        stats[\"closed_issues\"] = len(closed_issues.json()) if closed_issues.status_code == 200 else 0\n",
     "\n",
-    "        # Pull Requests\n",
     "        prs = requests.get(\n",
     "            f\"https://api.github.com/repos/{owner}/{repo_name}/pulls?state=all\",\n",
     "            headers=get_headers()\n",
@@ -266,13 +261,12 @@
     "                    \"open_issues\": repo[\"open_issues_count\"]\n",
     "                }\n",
     "                \n",
-    "                # Dados adicionais\n",
     "                repo_info.update(get_owner_info(repo[\"owner\"][\"url\"]))\n",
     "                repo_info.update(get_repo_stats(repo[\"owner\"][\"login\"], repo[\"name\"]))\n",
     "                \n",
     "                all_repos.append(repo_info)\n",
     "                \n",
-    "                time.sleep(1)  # Intervalo entre requests\n",
+    "                time.sleep(1)\n",
     "                \n",
     "        except Exception as e:\n",
     "            print(f\"Erro na página {page}: {e}\")\n",
@@ -307,9 +301,8 @@
     "        if not df.empty:\n",
     "            all_data = pd.concat([all_data, df], ignore_index=True)\n",
     "            print(f\"{len(df)} repositórios de {lang} coletados!\")\n",
-    "            time.sleep(300)  # Intervalo entre linguagens\n",
+    "            time.sleep(300)  \n",
     "            \n",
-    "    # Salva tudo em um único CSV no final\n",
     "    if not all_data.empty:\n",
     "        all_data.to_csv(\"github_repos_completos.csv\", index=False, encoding='utf-8')\n",
     "        print(f\"Todos os dados salvos em 'github_repos_completos2.csv'! Total: {len(all_data)} repositórios\")\n",
