feat: adicionando novo notebook para análise de repositórios GitHub e imagem de logo

--- a/notebooks/repos.ipynb
+++ b/notebooks/repos.ipynb
@@ -5,10 +5,12 @@
    "id": "69ed4ed2",
    "metadata": {},
    "source": [
-    "# 📊 Análise de Repositórios GitHub por Linguagem de Programação\n",
+    "<img title=\"a title\" alt=\"Alt text\" src=\"social.png\" width=\"100\" height=\"100\"> \n",
+    "\n",
+    "# Análise de Repositórios GitHub por Linguagem de Programação\n",
     "\n",
     "## 🌍 Introdução\n",
-    "Este projeto tem como objetivo criar um dataset rico e estruturado com informações dos repositórios mais relevantes do GitHub, organizados pelas 10 linguagens de programação mais populares em 2024. Com esses dados, podemos responder perguntas como:\n",
+    "Este projeto tem como objetivo criar um dataset rico e estruturado com informações dos repositórios mais relevantes do GitHub, organizados pelas 10 linguagens de programação mais populares em 2025. Com esses dados, podemos responder perguntas como:\n",
     "\n",
     "- Qual linguagem tem os projetos mais estrelados?\n",
     "- Há correlação entre o número de contribuidores e a atividade do repositório?\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "687dda73",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOKENS = []\n",
+    "TOKENS = [\n",
+    "            # \"TOKENS\"\n",
+    "    ]   \n",
+    "\n",
     "def get_headers():\n",
     "    return {\"Authorization\": f\"token {random.choice(TOKENS)}\"}"
    ]
@@ -89,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0bebbcae",
    "metadata": {},
    "outputs": [],
    "source": [
     "LANGUAGES = [\"Python\", \"JavaScript\", \"Java\", \"C#\", \"C++\", \"TypeScript\", \"Go\", \"Rust\", \"Kotlin\", \"Swift\"]\n",
     "PER_PAGE = 100\n",
-    "PAGES = 5 "
+    "PAGES = 15 "
    ]
   },
   {
@@ -104,7 +109,7 @@
    "id": "0263a6d3",
    "metadata": {},
    "source": [
-    "## 👤 Obter Informações do Dono\n",
+    "## 👤 Obter Informações do Dono do Repositório\n",
     "- Acessa o perfil do dono via API\n",
     "\n",
     "- Trata 3 informações principais: tipo, quantidade de repositórios e localização\n",
@@ -114,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c6fdbc03",
    "metadata": {},
    "outputs": [],
@@ -140,7 +145,7 @@
    "metadata": {},
    "source": [
     "## 📈 Coletar Estatísticas do Repositório\n",
-    "- Paginação automática para contagem precisa de contribuidores\n",
+    "- Paginação automática para contagem de contribuidores\n",
     "\n",
     "- Filtro temporal para issues fechadas\n",
     "\n",
@@ -188,7 +193,7 @@
     "                    break\n",
     "                contributors.extend(page_contributors)\n",
     "                page += 1\n",
-    "                time.sleep(1)  # Delay entre páginas\n",
+    "                time.sleep(1)\n",
     "            else:\n",
     "                break        \n",
     "        stats[\"contributors\"] = len(contributors)\n",
@@ -220,14 +225,14 @@
     "## 🔍 Função Principal: Busca por Linguagem\n",
     "- Rotação automática de tokens\n",
     "\n",
-    "- Intervalos inteligentes entre requisições\n",
+    "- Intervalos entre requisições\n",
     "\n",
     "- Consolidação em DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "bf06e907",
    "metadata": {},
    "outputs": [],
@@ -345,6 +350,16 @@
     "| `owner_type`          | string       | Tipo do dono (`User` ou `Organization`)                                  | `Organization`              |\n",
     "| `owner_public_repos`  | integer      | Quantidade de repositórios públicos do dono                              | `250`                       |\n",
     "| `owner_location`      | string       | Localização geográfica declarada no perfil (opcional)                    | `Mountain View, California` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a0d29c",
+   "metadata": {},
+   "source": [
+    "## Repositorio\n",
+    "\n",
+    "https://github.com/LucasjsSilva/data-set-repositorios"
    ]
   }
  ],
