feat: adding comments to req2.ipynb

--- a/notebooks/req2.ipynb
+++ b/notebooks/req2.ipynb
@@ -1,19 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6aa1f349",
+   "cell_type": "markdown",
+   "id": "c3eeb7b3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "6aa1f349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1c9f8d18",
    "metadata": {},
    "outputs": [
@@ -211,13 +218,28 @@
     }
    ],
    "source": [
+    "# Import the dataset into a pandas DataFrame\n",
     "df = pd.read_csv('../dados/github_repos_completos.csv')\n",
+    "\n",
+    "# Display dataset information\n",
+    "print('Dataset de Repositórios do GitHub contendo:')\n",
+    "print(f'{df.shape[0]} registros')\n",
+    "print(f'{df.shape[1]} colunas\\n')\n",
+    "\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc7dc9ca",
+   "metadata": {},
+   "source": [
+    "# Data Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6c931fba",
    "metadata": {},
    "outputs": [
@@ -251,16 +273,18 @@
     }
    ],
    "source": [
-    "df.dtypes\n"
+    "# Display the data types of each column in the DataFrame\n",
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8a4eff50",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a DataFrame to serve as a data dictionary, showing each attribute's name and its data type.\n",
     "dict_df = pd.DataFrame({\n",
     "    'Nome do Atributo': df.dtypes.index,\n",
     "    'Tipo do Valor': df.dtypes.values.astype(str),\n",
@@ -269,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "41dabe54",
    "metadata": {},
    "outputs": [
@@ -426,211 +450,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cd8085cc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Helper function to classify a data type as 'Numérico' (Numeric) or 'Categórico' (Categorical).\n",
     "def classify_format(dtype):\n",
     "    if dtype == 'int64' or dtype == 'float64':\n",
     "        return 'Numérico'\n",
     "    else:\n",
-    "        return 'Categórico'\n"
+    "        return 'Categórico'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "45e5203d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Apply the classification function to determine if each attribute is 'Numérico' or 'Categórico'.\n",
     "dict_df['Tipo do Formato'] = dict_df['Tipo do Valor'].apply(classify_format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "02b7bf48",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nome do Atributo</th>\n",
-       "      <th>Tipo do Valor</th>\n",
-       "      <th>Tipo do Formato</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>name</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>owner</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>stars</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>forks</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>language</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>created_at</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>updated_at</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>size_kb</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>watchers_count</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>open_issues</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>owner_type</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>owner_public_repos</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>owner_location</td>\n",
-       "      <td>object</td>\n",
-       "      <td>Categórico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>subscribers_count</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>last_year_commits</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>contributors</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>closed_issues</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>pull_requests</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Nome do Atributo Tipo do Valor Tipo do Formato\n",
-       "0                 name        object      Categórico\n",
-       "1                owner        object      Categórico\n",
-       "2                stars         int64        Numérico\n",
-       "3                forks         int64        Numérico\n",
-       "4             language        object      Categórico\n",
-       "5           created_at        object      Categórico\n",
-       "6           updated_at        object      Categórico\n",
-       "7              size_kb         int64        Numérico\n",
-       "8       watchers_count         int64        Numérico\n",
-       "9          open_issues         int64        Numérico\n",
-       "10          owner_type        object      Categórico\n",
-       "11  owner_public_repos         int64        Numérico\n",
-       "12      owner_location        object      Categórico\n",
-       "13   subscribers_count         int64        Numérico\n",
-       "14   last_year_commits         int64        Numérico\n",
-       "15        contributors         int64        Numérico\n",
-       "16       closed_issues         int64        Numérico\n",
-       "17       pull_requests         int64        Numérico"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fb0b6de2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add descriptions for each attribute to the data dictionary.\n",
     "descricoes = [\n",
     "    \"Nome do repositório\",\n",
     "    \"Login do usuário/organização dono\",\n",
@@ -650,22 +501,28 @@
     "    \"Número de contribuidores únicos\",\n",
     "    \"Issues fechadas nos últimos 6 meses\",\n",
     "    \"Quantidade total de pull requests (abertos + fechados)\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d96edd1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "]\n",
+    "\n",
     "dict_df['Descrição do Atributo'] = descricoes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "565f4d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Refine 'Tipo do Valor' for clarity and accuracy in the data dictionary.\n",
+    "# 'object' is replaced with 'string', and specific date columns are set to 'datetime'.\n",
+    "\n",
+    "dict_df['Tipo do Valor'] = dict_df['Tipo do Valor'].replace('object', 'string')\n",
+    "dict_df.loc[dict_df['Nome do Atributo'].isin(['created_at', 'updated_at']), 'Tipo do Valor'] = 'datetime'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "660a83af",
    "metadata": {},
    "outputs": [
@@ -880,246 +737,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e09e4d2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_df['Tipo do Valor'] = dict_df['Tipo do Valor'].replace('object', 'string')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "812ea986",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_df.loc[dict_df['Nome do Atributo'].isin(['created_at', 'updated_at']), 'Tipo do Valor'] = 'datetime'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8d357a00",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nome do Atributo</th>\n",
-       "      <th>Tipo do Valor</th>\n",
-       "      <th>Tipo do Formato</th>\n",
-       "      <th>Descrição do Atributo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>name</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Nome do repositório</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>owner</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Login do usuário/organização dono</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>stars</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Número de estrelas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>forks</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Número de forks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>language</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Linguagem principal do projeto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>created_at</td>\n",
-       "      <td>datetime</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Data de criação do repositório (UTC)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>updated_at</td>\n",
-       "      <td>datetime</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Data da última atualização</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>size_kb</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Tamanho aproximado do repositório em KB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>watchers_count</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Usuários acompanhando o repositório</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>open_issues</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Issues abertas no momento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>owner_type</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Tipo do dono (User ou Organization)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>owner_public_repos</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Quantidade de repositórios públicos do dono</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>owner_location</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Categórico</td>\n",
-       "      <td>Localização geográfica declarada no perfil (op...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>subscribers_count</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Inscritos no repositório</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>last_year_commits</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Quantidade de commits realizados nos últimos 1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>contributors</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Número de contribuidores únicos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>closed_issues</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Issues fechadas nos últimos 6 meses</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>pull_requests</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>Numérico</td>\n",
-       "      <td>Quantidade total de pull requests (abertos + f...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Nome do Atributo Tipo do Valor Tipo do Formato  \\\n",
-       "0                 name        string      Categórico   \n",
-       "1                owner        string      Categórico   \n",
-       "2                stars         int64        Numérico   \n",
-       "3                forks         int64        Numérico   \n",
-       "4             language        string      Categórico   \n",
-       "5           created_at      datetime      Categórico   \n",
-       "6           updated_at      datetime      Categórico   \n",
-       "7              size_kb         int64        Numérico   \n",
-       "8       watchers_count         int64        Numérico   \n",
-       "9          open_issues         int64        Numérico   \n",
-       "10          owner_type        string      Categórico   \n",
-       "11  owner_public_repos         int64        Numérico   \n",
-       "12      owner_location        string      Categórico   \n",
-       "13   subscribers_count         int64        Numérico   \n",
-       "14   last_year_commits         int64        Numérico   \n",
-       "15        contributors         int64        Numérico   \n",
-       "16       closed_issues         int64        Numérico   \n",
-       "17       pull_requests         int64        Numérico   \n",
-       "\n",
-       "                                Descrição do Atributo  \n",
-       "0                                 Nome do repositório  \n",
-       "1                   Login do usuário/organização dono  \n",
-       "2                                  Número de estrelas  \n",
-       "3                                     Número de forks  \n",
-       "4                      Linguagem principal do projeto  \n",
-       "5                Data de criação do repositório (UTC)  \n",
-       "6                          Data da última atualização  \n",
-       "7             Tamanho aproximado do repositório em KB  \n",
-       "8                 Usuários acompanhando o repositório  \n",
-       "9                           Issues abertas no momento  \n",
-       "10                Tipo do dono (User ou Organization)  \n",
-       "11        Quantidade de repositórios públicos do dono  \n",
-       "12  Localização geográfica declarada no perfil (op...  \n",
-       "13                           Inscritos no repositório  \n",
-       "14  Quantidade de commits realizados nos últimos 1...  \n",
-       "15                    Número de contribuidores únicos  \n",
-       "16                Issues fechadas nos últimos 6 meses  \n",
-       "17  Quantidade total de pull requests (abertos + f...  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e7349a9d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the created data dictionary DataFrame to a CSV file.\n",
     "dict_df.to_csv('../dados/req2.csv', index=False)"
    ]
   }
