--- a/notebooks/req2.ipynb
+++ b/notebooks/req2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6aa1f349",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1c9f8d18",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset de Repositórios do GitHub contendo:\n",
+      "9450 registros\n",
+      "18 colunas\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -68,151 +78,151 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>public-apis</td>\n",
-       "      <td>public-apis</td>\n",
-       "      <td>337982</td>\n",
-       "      <td>35685</td>\n",
+       "      <td>free-programming-books</td>\n",
+       "      <td>EbookFoundation</td>\n",
+       "      <td>359735</td>\n",
+       "      <td>63576</td>\n",
        "      <td>Python</td>\n",
-       "      <td>2016-03-20T23:49:42Z</td>\n",
-       "      <td>2025-04-28T01:10:29Z</td>\n",
-       "      <td>5030</td>\n",
-       "      <td>337982</td>\n",
-       "      <td>452</td>\n",
+       "      <td>2013-10-11T06:50:37Z</td>\n",
+       "      <td>2025-06-21T02:09:07Z</td>\n",
+       "      <td>19483</td>\n",
+       "      <td>359735</td>\n",
+       "      <td>45</td>\n",
        "      <td>Organization</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
+       "      <td>37</td>\n",
+       "      <td>virtual</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>339</td>\n",
+       "      <td>432</td>\n",
+       "      <td>129</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>system-design-primer</td>\n",
-       "      <td>donnemartin</td>\n",
-       "      <td>297377</td>\n",
-       "      <td>49424</td>\n",
+       "      <td>public-apis</td>\n",
+       "      <td>public-apis</td>\n",
+       "      <td>351991</td>\n",
+       "      <td>37004</td>\n",
        "      <td>Python</td>\n",
-       "      <td>2017-02-26T16:15:28Z</td>\n",
-       "      <td>2025-04-28T01:01:03Z</td>\n",
-       "      <td>11220</td>\n",
-       "      <td>297377</td>\n",
-       "      <td>489</td>\n",
-       "      <td>User</td>\n",
-       "      <td>27</td>\n",
-       "      <td>Washington, D.C.</td>\n",
-       "      <td>30</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2016-03-20T23:49:42Z</td>\n",
+       "      <td>2025-06-21T02:06:40Z</td>\n",
+       "      <td>4771</td>\n",
+       "      <td>351991</td>\n",
+       "      <td>492</td>\n",
+       "      <td>Organization</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4316</td>\n",
+       "      <td>5</td>\n",
+       "      <td>427</td>\n",
+       "      <td>159</td>\n",
+       "      <td>490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>awesome-python</td>\n",
-       "      <td>vinta</td>\n",
-       "      <td>241676</td>\n",
-       "      <td>25593</td>\n",
+       "      <td>system-design-primer</td>\n",
+       "      <td>donnemartin</td>\n",
+       "      <td>306925</td>\n",
+       "      <td>50727</td>\n",
        "      <td>Python</td>\n",
-       "      <td>2014-06-27T21:00:06Z</td>\n",
-       "      <td>2025-04-28T01:08:03Z</td>\n",
-       "      <td>6769</td>\n",
-       "      <td>241676</td>\n",
-       "      <td>473</td>\n",
+       "      <td>2017-02-26T16:15:28Z</td>\n",
+       "      <td>2025-06-21T02:06:11Z</td>\n",
+       "      <td>11239</td>\n",
+       "      <td>306925</td>\n",
+       "      <td>498</td>\n",
        "      <td>User</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Taiwan</td>\n",
-       "      <td>30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>30</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Washington, D.C.</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>113</td>\n",
+       "      <td>18</td>\n",
+       "      <td>256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>awesome-python</td>\n",
+       "      <td>vinta</td>\n",
+       "      <td>247255</td>\n",
+       "      <td>25843</td>\n",
        "      <td>Python</td>\n",
-       "      <td>TheAlgorithms</td>\n",
-       "      <td>199952</td>\n",
-       "      <td>46665</td>\n",
-       "      <td>Python</td>\n",
-       "      <td>2016-07-16T09:44:01Z</td>\n",
-       "      <td>2025-04-28T01:08:49Z</td>\n",
-       "      <td>15239</td>\n",
-       "      <td>199952</td>\n",
-       "      <td>371</td>\n",
-       "      <td>Organization</td>\n",
-       "      <td>44</td>\n",
-       "      <td>India</td>\n",
-       "      <td>30</td>\n",
-       "      <td>178</td>\n",
+       "      <td>2014-06-27T21:00:06Z</td>\n",
+       "      <td>2025-06-21T02:08:14Z</td>\n",
+       "      <td>6769</td>\n",
+       "      <td>247255</td>\n",
+       "      <td>486</td>\n",
+       "      <td>User</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>5000</td>\n",
        "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
+       "      <td>368</td>\n",
+       "      <td>28</td>\n",
+       "      <td>471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AutoGPT</td>\n",
-       "      <td>Significant-Gravitas</td>\n",
-       "      <td>174836</td>\n",
-       "      <td>45629</td>\n",
        "      <td>Python</td>\n",
-       "      <td>2023-03-16T09:21:07Z</td>\n",
-       "      <td>2025-04-28T00:50:10Z</td>\n",
-       "      <td>241531</td>\n",
-       "      <td>174836</td>\n",
-       "      <td>207</td>\n",
+       "      <td>TheAlgorithms</td>\n",
+       "      <td>201541</td>\n",
+       "      <td>46909</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>2016-07-16T09:44:01Z</td>\n",
+       "      <td>2025-06-21T01:50:56Z</td>\n",
+       "      <td>15391</td>\n",
+       "      <td>201541</td>\n",
+       "      <td>397</td>\n",
        "      <td>Organization</td>\n",
-       "      <td>21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1392</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
+       "      <td>44</td>\n",
+       "      <td>India</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>181</td>\n",
+       "      <td>454</td>\n",
+       "      <td>334</td>\n",
+       "      <td>329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   name                 owner   stars  forks language  \\\n",
-       "0           public-apis           public-apis  337982  35685   Python   \n",
-       "1  system-design-primer           donnemartin  297377  49424   Python   \n",
-       "2        awesome-python                 vinta  241676  25593   Python   \n",
-       "3                Python         TheAlgorithms  199952  46665   Python   \n",
-       "4               AutoGPT  Significant-Gravitas  174836  45629   Python   \n",
+       "                     name            owner   stars  forks language  \\\n",
+       "0  free-programming-books  EbookFoundation  359735  63576   Python   \n",
+       "1             public-apis      public-apis  351991  37004   Python   \n",
+       "2    system-design-primer      donnemartin  306925  50727   Python   \n",
+       "3          awesome-python            vinta  247255  25843   Python   \n",
+       "4                  Python    TheAlgorithms  201541  46909   Python   \n",
        "\n",
        "             created_at            updated_at  size_kb  watchers_count  \\\n",
-       "0  2016-03-20T23:49:42Z  2025-04-28T01:10:29Z     5030          337982   \n",
-       "1  2017-02-26T16:15:28Z  2025-04-28T01:01:03Z    11220          297377   \n",
-       "2  2014-06-27T21:00:06Z  2025-04-28T01:08:03Z     6769          241676   \n",
-       "3  2016-07-16T09:44:01Z  2025-04-28T01:08:49Z    15239          199952   \n",
-       "4  2023-03-16T09:21:07Z  2025-04-28T00:50:10Z   241531          174836   \n",
+       "0  2013-10-11T06:50:37Z  2025-06-21T02:09:07Z    19483          359735   \n",
+       "1  2016-03-20T23:49:42Z  2025-06-21T02:06:40Z     4771          351991   \n",
+       "2  2017-02-26T16:15:28Z  2025-06-21T02:06:11Z    11239          306925   \n",
+       "3  2014-06-27T21:00:06Z  2025-06-21T02:08:14Z     6769          247255   \n",
+       "4  2016-07-16T09:44:01Z  2025-06-21T01:50:56Z    15391          201541   \n",
        "\n",
        "   open_issues    owner_type  owner_public_repos    owner_location  \\\n",
-       "0          452  Organization                   1               NaN   \n",
-       "1          489          User                  27  Washington, D.C.   \n",
-       "2          473          User                  20            Taiwan   \n",
-       "3          371  Organization                  44             India   \n",
-       "4          207  Organization                  21               NaN   \n",
+       "0           45  Organization                  37           virtual   \n",
+       "1          492  Organization                   1               NaN   \n",
+       "2          498          User                  27  Washington, D.C.   \n",
+       "3          486          User                  20            Taiwan   \n",
+       "4          397  Organization                  44             India   \n",
        "\n",
        "   subscribers_count  last_year_commits  contributors  closed_issues  \\\n",
-       "0                 30                  5             1             30   \n",
-       "1                 30                  3             1             14   \n",
-       "2                 30                  3             1             23   \n",
-       "3                 30                178             1             30   \n",
-       "4                 30               1392             1             30   \n",
+       "0               5000                339           432            129   \n",
+       "1               4316                  5           427            159   \n",
+       "2               5000                  4           113             18   \n",
+       "3               5000                  1           368             28   \n",
+       "4               5000                181           454            334   \n",
        "\n",
        "   pull_requests  \n",
-       "0             30  \n",
-       "1             30  \n",
-       "2             30  \n",
-       "3             30  \n",
-       "4             30  "
+       "0             15  \n",
+       "1            490  \n",
+       "2            256  \n",
+       "3            471  \n",
+       "4            329  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6c931fba",
    "metadata": {},
    "outputs": [
@@ -267,7 +277,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8a4eff50",
    "metadata": {},
    "outputs": [],
@@ -293,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "41dabe54",
    "metadata": {},
    "outputs": [
@@ -439,7 +449,7 @@
        "17       pull_requests         int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cd8085cc",
    "metadata": {},
    "outputs": [],
@@ -465,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "45e5203d",
    "metadata": {},
    "outputs": [],
@@ -476,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fb0b6de2",
    "metadata": {},
    "outputs": [],
@@ -508,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "565f4d3a",
    "metadata": {},
    "outputs": [],
@@ -522,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "660a83af",
    "metadata": {},
    "outputs": [
@@ -557,14 +567,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>name</td>\n",
-       "      <td>object</td>\n",
+       "      <td>string</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Nome do repositório</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>owner</td>\n",
-       "      <td>object</td>\n",
+       "      <td>string</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Login do usuário/organização dono</td>\n",
        "    </tr>\n",
@@ -585,21 +595,21 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>language</td>\n",
-       "      <td>object</td>\n",
+       "      <td>string</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Linguagem principal do projeto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>created_at</td>\n",
-       "      <td>object</td>\n",
+       "      <td>datetime</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Data de criação do repositório (UTC)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>updated_at</td>\n",
-       "      <td>object</td>\n",
+       "      <td>datetime</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Data da última atualização</td>\n",
        "    </tr>\n",
@@ -627,7 +637,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>owner_type</td>\n",
-       "      <td>object</td>\n",
+       "      <td>string</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Tipo do dono (User ou Organization)</td>\n",
        "    </tr>\n",
@@ -641,7 +651,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>owner_location</td>\n",
-       "      <td>object</td>\n",
+       "      <td>string</td>\n",
        "      <td>Categórico</td>\n",
        "      <td>Localização geográfica declarada no perfil (op...</td>\n",
        "    </tr>\n",
@@ -686,19 +696,19 @@
       ],
       "text/plain": [
        "      Nome do Atributo Tipo do Valor Tipo do Formato  \\\n",
-       "0                 name        object      Categórico   \n",
-       "1                owner        object      Categórico   \n",
+       "0                 name        string      Categórico   \n",
+       "1                owner        string      Categórico   \n",
        "2                stars         int64        Numérico   \n",
        "3                forks         int64        Numérico   \n",
-       "4             language        object      Categórico   \n",
-       "5           created_at        object      Categórico   \n",
-       "6           updated_at        object      Categórico   \n",
+       "4             language        string      Categórico   \n",
+       "5           created_at      datetime      Categórico   \n",
+       "6           updated_at      datetime      Categórico   \n",
        "7              size_kb         int64        Numérico   \n",
        "8       watchers_count         int64        Numérico   \n",
        "9          open_issues         int64        Numérico   \n",
-       "10          owner_type        object      Categórico   \n",
+       "10          owner_type        string      Categórico   \n",
        "11  owner_public_repos         int64        Numérico   \n",
-       "12      owner_location        object      Categórico   \n",
+       "12      owner_location        string      Categórico   \n",
        "13   subscribers_count         int64        Numérico   \n",
        "14   last_year_commits         int64        Numérico   \n",
        "15        contributors         int64        Numérico   \n",
@@ -726,7 +736,7 @@
        "17  Quantidade total de pull requests (abertos + f...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e7349a9d",
    "metadata": {},
    "outputs": [],
